Fixes pseudo element covering up the border

--- a/tool-ui/src/main/webapp/style/v3/drop-down.less
+++ b/tool-ui/src/main/webapp/style/v3/drop-down.less
@@ -37,6 +37,10 @@
       border-radius: 0;
       top: 0;
     }
+
+    &:after {
+      bottom: 2px;
+    }
   }
 
   &[data-attachment='left'],
